<resources>
    <string name="app_name">ConnectME</string>
    <string name="hint_username">username</string>
    <string name="hint_email">abc@xyz.com</string>
    <string name="hint_password">********</string>
    <string name="button_signup">Go!</string>
    <string name="button_signin">Connect!</string>
    <string name="menu_signout">Sign out</string>
    <string name="privacy_mode">Privacy Mode</string>
    <string name="location">Location</string>
    <string name="send">Send</string>
    <string name="message_hint">Write your message here...</string>
    <string name="title_activity_location">Map</string>
</resources>

