<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shubham1172.connectme.ChatActivity"
    android:padding="10dp">

    <!-- Dummy layout to solve touch issues -->
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <ProgressBar
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:id="@+id/progress_chat"/>

    <ListView
        android:id="@+id/messageListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transcriptMode="alwaysScroll"
        android:dividerHeight="10dp"
        tools:listitem="@layout/chat_message"
        android:divider="@android:color/transparent"
        android:layout_above="@+id/linear_layout_chat"
        android:stackFromBottom="true"/>

    <LinearLayout
        android:id="@+id/linear_layout_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:nextFocusUp="@+id/linear_layout_chat"
        android:nextFocusDown="@+id/linear_layout_chat">

        <EditText
            android:id="@+id/chat_edit_text"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="48dp"
            android:hint="@string/message_hint"/>

        <Button
            android:id="@+id/chat_send_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:text="@string/send"
            android:onClick="onClick"/>

    </LinearLayout>

</RelativeLayout>
