<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shubham1172.connectme.SignInFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_email"
            android:id="@+id/email_signin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:id="@+id/password_signin"
            android:hint="@string/hint_password"
            android:layout_below="@id/email_signin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/button_signin"
            android:id="@+id/button_signin"
            android:layout_below="@id/password_signin"/>
    </RelativeLayout>

</FrameLayout>
